--- a/trig2.html
+++ b/trig2.html
@@ -155,7 +155,7 @@
   <body data-rssl="1">
   <canvas id="drawBoard" width="750" height="750"></canvas>
 <input type="range" min="0" max="900" value="450" class="slider" id="alpha-slider">
-  Vinkel α =  <span id="alpha-text" style="color:#3f3ff5">
-  </span>
+  Vinkel α =
+  <span id="alpha-text" style="color:#3f3ff5"></span>
   </body>
 </html>
