added butten css

--- a/trig2.html
+++ b/trig2.html
@@ -150,6 +150,13 @@
         background-color: #19191d;
         color:khaki
       }
+      button {
+        border: none;
+        padding: 14px 28px;
+        cursor: pointer;
+        display: grid;
+      }
+      button.hover {background: #eee}
     </style>
   </head>
   <body data-rssl="1">
