--- a/trig2.html
+++ b/trig2.html
@@ -83,6 +83,20 @@
       }
       ctx.fillText(' = π*' + my_round(pis), textX + 60, middle - offset)
     }
+    function drawLabelAtPos(text, x, y, rotation, x_offset, y_offset, textAlign, color) {
+
+      ctx.save()
+      ctx.textAlign = textAlign
+      ctx.fillStyle = color
+
+      ctx.translate(x, y)
+      ctx.rotate(rotation)
+      ctx.fillText(text, x_offset, y_offset)
+
+      ctx.stroke()
+
+      ctx.restore()
+    }
     function drawTrig() {
 
       ctx.putImageData(staticPicture, 0, 0)
@@ -104,10 +118,13 @@
       x2 = cos_alpha * oneSize
       y2 = sin_alpha * -oneSize
 
+      var csc_y = -csc_alpha * oneSize + middle
+      var sec_x = sec_alpha * oneSize + middle
+
       drawTriangle(ctx, middle, 0, 0, x2, y2, x2, 0)
 
-      drawLine(ctx, middle, -csc_alpha * oneSize + middle, middle + x2, middle + y2, 'green')
-      drawLine(ctx, middle + x2, middle + y2, middle + sec_alpha * oneSize, middle, 'yellow')
+      drawLine(ctx, middle, csc_y, middle + x2, middle + y2, 'green')
+      drawLine(ctx, middle + x2, middle + y2, sec_x, middle, 'yellow')
       drawLine(ctx, middle, middle + y2, middle + x2, middle + y2, 'green')
 
       ctx.beginPath()
@@ -117,7 +134,6 @@
 
       ctx.fillStyle = 'green'
       ctx.font = '20px sans-serif'
-      ctx.textAlign = 'left'
       drawMathLabel(ctx, "", alpha, 360)
       drawMathLabel(ctx, "sin", sin_alpha, 330)
       drawMathLabel(ctx, "cos", cos_alpha, 300)
@@ -125,6 +141,29 @@
       drawMathLabel(ctx, "cot", cot_alpha, 240)
       drawMathLabel(ctx, "csc", csc_alpha, 210)
       drawMathLabel(ctx, "sec", sec_alpha, 180)
+
+      var occupiedAngleDiff = 0.37
+
+      if ((alpha - (math.pi / 4 )) % (math.pi/2) > 0.37) {
+        csc_label_x = middle - 35
+      } else {
+        csc_label_x = middle - 10
+      }
+
+      if (alpha % (math.pi/2) > 0.23 ) {
+        sec_label_y = middle + 20
+      } else {
+        sec_label_y = middle + 45
+      }
+
+      ctx.font = '15px sans-serif'
+      drawLabelAtPos("sin", 0, 0, 0, middle - 10, middle + y2 + 4, 'right', 'green')
+      drawLabelAtPos("cos", 0, 0, 0, middle + x2, middle + 20, 'right', dynamicColor)
+      drawLabelAtPos("csc", 0, 0, 0, csc_label_x, csc_y, 'right', 'green')
+      drawLabelAtPos("sec", 0, 0, 0, sec_x, sec_label_y, 'left', dynamicColor)
+      drawLabelAtPos("tan", middle + x2, middle + y2, -alpha + (math.pi / 2), 10, -10, 'left', 'yellow')
+      drawLabelAtPos("cot", middle + x2, middle + y2, -alpha + (math.pi/2), -10, -10, 'right')
+
     }
 
     var staticPicture
