--- a/trig2.html
+++ b/trig2.html
@@ -2,7 +2,7 @@
 <meta charset="utf-8">
 
 <head>
-  <script src="math.min.js"></script>
+  <script src="https://unpkg.com/mathjs/lib/browser/math.js"></script>
   <script>
     window.onload = init
 
